@@ -1,6 +1,9 @@
 Internal, very small, undocumented, or invisible changes
 ********************************************************
 
+Camlp5 Version 5.03:
+---------------------
+
 Camlp5 Version 5.01:
 ---------------------
 
